[package]
name = "date_the_map"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
axum = "0.8.8"
tokio = "1.49.0"
reqwest = { version = "0.13.1", features = ["charset", "gzip"] }
regex = "1.11.1"
tauri-plugin-shell = "2"
log = "0.4.26"
rodio = "0.20.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tl = "0.7.8"
